libs/slim/test/typecheck/fail/boolean_expression.shader
shader vertex {
    true && 2;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
